--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
 {
-    "manifest_version": 2,
-    "name": "Google Image Search",
-    "version": "1.0",
-    "description": "Adds a context menu option to search any image on Google.",
-    "permissions": ["contextMenus", "activeTab"],
-    "background": {
-      "scripts": ["background.js"]
-    },
-    "icons": {
-      "48": "icons/icon48.png"
-    }
-  }
-  
+  "manifest_version": 2,
+  "name": "Google Image Search",
+  "version": "1.0",
+  "description": "Adds a context menu option to search any image on Google.",
+  "permissions": ["contextMenus", "activeTab"],
+  "background": {
+    "scripts": ["background.js"]
+  },
+  "icons": {
+    "48": "icons/icon48.png"
+  },
+  "author": "Grishma Raj Khanal",
+  "homepage_url": "https://github.com/GrishmaKhanal/search-google",
+  "contributors": ["Ayush Bhusal", "ChatGpt 4o"]
+}
