--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,5 @@
     "48": "icons/icon48.png"
   },
   "author": "Grishma Raj Khanal",
-  "homepage_url": "https://github.com/GrishmaKhanal/search-google",
-  "contributors": ["Ayush Bhusal", "ChatGpt 4o"]
+  "homepage_url": "https://github.com/GrishmaKhanal/search-google"
 }
